@@ -129,8 +129,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 4357cba70de35133daa7d491981557b763211c64 assets/createbigcannons/blockstates/wrought_iron_cannon_chamber.json
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-d03f93df70522fe1483f3fcac3796fc325b99cfa assets/createbigcannons/lang/en_ud.json
-fb9b69bbcc95a4ef93e6920e6b0824670f9bec87 assets/createbigcannons/lang/en_us.json
+631422d3069835aaad33cb5bea20c0bb5fce4677 assets/createbigcannons/lang/en_ud.json
+586e8913b477e55ffcddb2daa86ab07371cb7d8f assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
